Authors and paper title

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -23,28 +23,25 @@
 
 %\preprint{}
 
-\title{Evaluation of Stochastic Particle Dispersion Modeling in \\ Turbulent Round Jets} 
+\title{Chemical Mechanism Reduction Using a Directed Graph Relation Approach} 
 
-\author[byu]{Guangyuan Sun}
-\ead{gysungrad@gmail.com}
-\author[snl]{John C. Hewson}
-\ead{jchewso@sandia.gov}
+\author[byu]{Jansen Berryhill}
+\ead{jansenpb@byu.edu}
 \author[byu]{David O. Lignell\corref{cor1}\fnref{fn1}}
 \ead{davidlignell@byu.edu}
 
 \address[byu]{350 CB, Brigham Young University, Provo, UT 84602, USA}
-\address[snl]{Fire Science and Technology Department, Sandia National Laboratories, Albuquerque, NM, USA}
 \cortext[cor1]{Corresponding author}
 \fntext[fn1]{Phone: (801) 422-1772}
 
-\journal{International Journal of Multiphase flow}
+\journal{SoftwareX}
 
 \date{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-
+https://www.overleaf.com/project/65568d11b19a494faddfef8b
 \lipsum[1]     % replace this with your abstract text
 
 \end{abstract}
