--- a/manuscript/drg.tex
+++ b/manuscript/drg.tex
@@ -23,7 +23,7 @@
 
 %\preprint{}
 
-\title{DRG code for the reduction of chemical mechanisms} 
+\title{Directed relation graph: A method for reducing chemical mechanisms} 
 
 \author[byu]{Jansen Berryhill}
 \ead{jansenpb@byu.edu}
@@ -75,7 +75,7 @@ directed relation graph \sep chemical mechanism \sep DRG
 
 \section{Introduction}      \label{sec:intro}
 \paragraph{}
-Chemical mechanisms play an important role in combustion modeling. A full chemical mechanism can be tailored for a certain fuel, like methane (CH$_4$) or ethylene (C$_2$H$_2$). (REFS HERE) However, these full mechanisms can contain many species and hundreds of chemical reactions, which can greatly increase the computational cost of the simulation. For example, simulations using finite rate chemistry must solve a partial differential equation (PDE) for every chemical species. One solution to this issue is the usage of reduced or skeletal mechanisms. A reduced mechanism eliminates certain species and their corresponding reactions from the mechanism, thereby reducing the number of PDEs that need to be solved. (REF HERE?) 
+
 \paragraph{}
 \lipsum[2]     % replace this with your intro text
 
